# GStreamer

./: README.md
cerbero/recipes/: gst-libav-1.0.recipe  gst-plugins-bad-1.0.recipe  gst-plugins-base-1.0.recipe  gst-plugins-good-1.0.recipe  gst-plugins-ugly-1.0.recipe  gstreamer-1.0.recipe
cerbero/recipes/gst-libav-1.0/: 0001-TCL-modifications-for-gst-libav.patch  0001-ffmpeg-avauddec-avviddec-Free-packet-side-data-after.patch
cerbero/recipes/gst-plugins-bad-1.0/: 0001-TCL-modifications-for-gst-plugins-bad.patch
cerbero/recipes/gst-plugins-base-1.0/: 0001-TCL-modifications-for-gst-plugins-base.patch
cerbero/recipes/gst-plugins-good-1.0/: 0001-TCL-modifications-for-gst-plugins-good.patch
cerbero/recipes/gst-plugins-ugly-1.0/: 0001-TCL-modifications-for-gst-plugins-ugly.patch
cerbero/recipes/gstreamer-1.0/: 0001-TCL-modifications-for-gstreamer.patch
smbsrc/: CMakeLists.txt  gstsmbsrc.c  gstsmbsrc.h
